2021-08-19  Alan Bujtas  <zalan@apple.com>

        [LFC][IFC] Add support for negative horizontal margin (inline box)
        https://bugs.webkit.org/show_bug.cgi?id=227837

        Reviewed by Antti Koivisto.

        When building up the line for line breaking, each inline item is placed adjacent with no gaps
        in-between the neighboring entries. They are considered atomic with their margins, padding, borders and content width.
        Later when we form the inline runs out of these entries, we offset them by their horizontal margin values. 

        * layout/formattingContexts/inline/InlineLine.cpp:
        (WebCore::Layout::Line::appendInlineBoxStart):
        * layout/integration/LayoutIntegrationCoverage.cpp:
        (WebCore::LayoutIntegration::printReason):
        (WebCore::LayoutIntegration::canUseForChild):
        * layout/integration/LayoutIntegrationCoverage.h:

2021-08-19  Alan Bujtas  <zalan@apple.com>

        [LFC][IFC] Add support for overflow-wrap: anywhere
        https://bugs.webkit.org/show_bug.cgi?id=227695

        Reviewed by Antti Koivisto.

        Adjust the line breaking logic in IFC to support "overflow-wrap: anywhere".
        From the line breaking point of view, "anywhere" and "break-word" work the same way
        (i.e. an unbreakable content can be broken at an arbitrary position if there are no other, previous break points in the line).

        https://drafts.csswg.org/css-text-3/#overflow-wrap-property

        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator OverflowWrap const):
        * css/parser/CSSParserFastPaths.cpp:
        (WebCore::CSSParserFastPaths::isValidKeywordPropertyAndValue):
        * layout/formattingContexts/inline/InlineContentBreaker.cpp:
        (WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::breakWords const):